# security-weekly-mcp

./: .ai_profile  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy-rss.yml  monthly-health.yml  release.yml  update-glossary.yml  weekly-collect.yml  weekly-reminder.yml  weekly-report.yml
config/: README.md  search_templates.yaml  sources.yaml  writing_style.yaml
docs/: feed.xml
docs/adr/: ADR-001-initial-technology-stack.md  ADR-001-mcp-server-architecture.md
docs/reports/: SEC-WEEKLY-2026-01.html  SEC-WEEKLY-2026-02.html  SEC-WEEKLY-2026-03.html  SEC-WEEKLY-2026-04.html  SEC-WEEKLY-2026-05.html  SEC-WEEKLY-2026-06.html  SEC-WEEKLY-2026-07.html
docs/specs/: SPEC-001-mcp-server.md  SPEC-001-mcp-tools-interface.md
output/reports/: SEC-WEEKLY-2026-01.json  SEC-WEEKLY-2026-02.json  SEC-WEEKLY-2026-03.json  SEC-WEEKLY-2026-04.json  SEC-WEEKLY-2026-05.json  SEC-WEEKLY-2026-06.json  SEC-WEEKLY-2026-07.json  SEC-WEEKLY-2026-08.json  SEC-WEEKLY-2026-09.json  SEC-WEEKLY-2026-10.json  SEC-WEEKLY-2026-11.json  SEC-WEEKLY-2026-12.json  SEC-WEEKLY-2026-13.json  SEC-WEEKLY-2026-14.json  SEC-WEEKLY-2026-15.json  SEC-WEEKLY-2026-16.json  SEC-WEEKLY-2026-17.json  SEC-WEEKLY-2026-18.json  SEC-WEEKLY-2026-19.json  SEC-WEEKLY-2026-20.json  SEC-WEEKLY-2026-21.json  SEC-WEEKLY-2026-22.json  SEC-WEEKLY-2026-23.json  SEC-WEEKLY-2026-24.json  SEC-WEEKLY-2026-25.json  SEC-WEEKLY-2026-26.json  SEC-WEEKLY-2026-27.json  SEC-WEEKLY-2026-28.json  SEC-WEEKLY-2026-29.json  SEC-WEEKLY-2026-W07.json
scripts/: claude-weekly-report.mjs  collect_weekly_data.py  generate_rss.py  generate_weekly_report.py  notify_line.py  package.json
skill/: README.md  SKILL.md
skill/references/: categories.md  security_sources.md  term_format.md  writing_style.md
tests/: conftest.py  test_glossary_tools.py  test_news_tools.py  test_report_tools.py  test_sources_integration.py  test_term_approval.py  test_term_discovery.py
(+6 files in other folders)
