[project]
name = "security-weekly-mcp"
version = "0.1.0"
description = "MCP Server for security weekly reports and glossary management"
requires-python = ">=3.11"
readme = "README.md"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
