[project]
name = "security-weekly-mcp"
version = "0.1.0"
description = "MCP Server for security weekly reports and glossary management"
requires-python = ">=3.11"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring network",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ASYNC"]
ignore = [
    "E501",    # Line too long (handled separately)
    "ASYNC",   # Async blocking issues (requires larger refactor)
]
